Fixes the description overflow

--- a/src/sass/PostCard.scss
+++ b/src/sass/PostCard.scss
@@ -26,6 +26,9 @@
 
     p {
       color: white;
+      line-height: 1.5rem;
+      max-height: 4.5rem;
+      overflow: hidden;
 
       &.title {
         font-weight: bold;
